Updated notebook to reference .env
updated the setup section to use a .env file for extra security for sensitive data

--- a/ncbi_pubmed_literature_review_toolkit.ipynb
+++ b/ncbi_pubmed_literature_review_toolkit.ipynb
@@ -15,10 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ae0369f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'requests' is already installed.\n"
+     ]
+    }
+   ],
    "source": [
     "import subprocess\n",
     "import sys\n",
@@ -40,35 +48,42 @@
    "source": [
     "# 1. Setup & Define Your Folders and API Key\n",
     "\n",
-    "In the below section uncomment (ctrl+/ on PC or command+/ on Mac) the relevant lines to define the csv and summary folder and to include your API key. API key for the NCBI API is optional but recommended"
+    "Make sure your .env file is setup with your API key, and output folders. API key for the NCBI API is optional but recommended. You can find a .env.example in "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "228ec081",
+   "execution_count": 2,
+   "id": "12b55d7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Output folders and API key are set up and ready.\n"
+     ]
+    }
+   ],
    "source": [
-    "# === SECTION: USER SETUP (PC/Windows) ===\n",
-    "# Uncomment below and edit these variables to match your Windows setup\n",
-    "# csv_folder = r\"C:\\Users\\YOUR_USERNAME\\Documents\\csvs\\pubmed_csv\"\n",
-    "# summary_folder = r\"C:\\Users\\YOUR_USERNAME\\Documents\\csvs\\summaries\"\n",
-    "# api_key = \"YOUR_NCBI_API_KEY\"  # Replace with your NCBI API key\n",
-    "\n",
-    "# === SECTION: USER SETUP (Mac) ===\n",
-    "# Uncomment below and edit these lines to match your Mac setup\n",
-    "csv_folder = r\"/Users/YOUR_USERNAME/Documents/csvs/pubmed_csv\"\n",
-    "summary_folder = r\"/Users/YOUR_USERNAME/Documents/csvs/summaries\"\n",
-    "api_key = \"YOUR_NCBI_API_KEY\"  # Replace with your NCBI API key (https://developer.ieee.org/)\n",
-    "\n",
-    "# === SECTION: FOLDER CREATION AND CHECK ===\n",
     "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
+    "# Load .env variables\n",
+    "load_dotenv(find_dotenv())\n",
+    "\n",
+    "# Get folder paths and API key from environment variables\n",
+    "csv_folder = os.getenv(\"CSV_FOLDER\")\n",
+    "summary_folder = os.getenv(\"SUMMARY_FOLDER\")\n",
+    "api_key = os.getenv(\"YOUR_NCBI_API_KEY\")\n",
+    "\n",
+    "# This will create the folders (and parents) if they do NOT exist—does nothing if they do\n",
     "os.makedirs(csv_folder, exist_ok=True)\n",
     "os.makedirs(summary_folder, exist_ok=True)\n",
+    "\n",
+    "# Check that folders and API key are set\n",
     "missing = []\n",
-    "if not api_key or api_key == \"YOUR_NCBI_API_KEY\":\n",
+    "if not api_key or api_key == \"YOUR_NCBI_API_KEY\" or api_key == \"your_actual_ncbi_key_here\":\n",
     "    missing.append(\"API key\")\n",
     "if not os.path.isdir(csv_folder):\n",
     "    missing.append(\"CSV folder\")\n",
@@ -100,7 +115,17 @@
    "execution_count": null,
    "id": "87d22ada",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keyword groups and logic defined.\n",
+      "Year filter: 2016:3000[dp]\n",
+      "Combined PubMed query: (neuroimaging pipeline OR MRI processing OR neuroinformatics pipeline) AND (structural MRI OR T1-weighted OR T2-weighted OR low-field MRI OR portable MRI) AND (continuous integration OR continuous deployment OR CI/CD OR containerization OR containerisation OR version control OR cloud-based OR serverless OR distributed storage OR BIDS OR flywheel.io OR github OR gitlab OR reproducibility) AND (brain OR neuroimaging) NOT (fMRI OR EEG OR MEG OR functional connectivity OR clinical trial)\n"
+     ]
+    }
+   ],
    "source": [
     "# === EDIT THIS CELL TO CHANGE YEAR RANGE ===\n",
     "year_range = \"2016:3000[dp]\"\n",
@@ -108,11 +133,13 @@
     "# === EDIT THIS CELL TO CHANGE KEYWORDS/LOGIC ===\n",
     "groups = {\n",
     "    'group1': 'keyword OR keyword',\n",
-    "    'group2': 'keyword OR keyword AND keyword',\n",
-    "    'excluded': 'NOT (keyword or keyword)'\n",
+    "    'group2': 'keyword OR keyword',\n",
+    "    'group3': 'keyword',\n",
+    "    'group4': 'keyword',\n",
+    "    'excluded': 'NOT (keyword OR keyword)',\n",
     "}\n",
     "\n",
-    "logic = \"({group1}) AND ({group2}) {excluded}\"\n",
+    "logic = \"({group1}) AND ({group2}) AND ({group3}) AND ({group4}) {excluded}\"\n",
     "combined_query = logic.format(**groups)\n",
     "\n",
     "print(f\"Keyword groups and logic defined.\\nYear filter: {year_range}\")\n",
@@ -121,10 +148,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bb033190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year limit applied to all queries: 2016:3000[dp]\n",
+      "\n",
+      "==================================================\n",
+      "INDIVIDUAL GROUP RESULTS:\n",
+      "==================================================\n",
+      "GROUP1                   : 62505 results\n",
+      "GROUP2                   : 75448 results\n",
+      "GROUP3                   : 363979 results\n",
+      "GROUP4                   : 925422 results\n",
+      "\n",
+      "==================================================\n",
+      "COMBINED LOGIC RESULTS:\n",
+      "==================================================\n",
+      "Logic: ({group1}) AND ({group2}) AND ({group3}) AND ({group4}) {excluded}\n",
+      "\n",
+      "Combined query: (neuroimaging pipeline OR MRI processing OR neuroinformatics pipeline) AND (structural MRI OR T1-weighted OR T2-weighted OR low-field MRI OR portable MRI) AND (continuous integration OR continuous deployment OR CI/CD OR containerization OR containerisation OR version control OR cloud-based OR serverless OR distributed storage OR BIDS OR flywheel.io OR github OR gitlab OR reproducibility) AND (brain OR neuroimaging) NOT (fMRI OR EEG OR MEG OR functional connectivity OR clinical trial)\n",
+      "Combined results: 51\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: Run API Query and Return Total Results for Each Group and Combined Query ===\n",
     "\n",
@@ -190,10 +241,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e28fd501",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP1\n",
+      "==================================================\n",
+      "1. Comparison of two preprocessing methods for\n",
+      "2. Mediating role of feeder connections in the relationship between brain network efficiency and episodic memory in amnestic MCI.\n",
+      "3. Breaking data silos: incorporating the DICOM imaging standard into the OMOP CDM to enable multimodal research.\n",
+      "4. Real-time color flow mapping of ultrasound microrobots.\n",
+      "5. An Automatic 3D PET Tumor Segmentation Framework Assisted by Geodesic Sequences.\n",
+      "6. High-resolution 3D whole-heart bright- and black-blood imaging with co-registered T2 mapping at 0.55 T.\n",
+      "7. Higher-order Sonification of the Human Brain.\n",
+      "8. Mitigating Organophosphate Nerve Agent, Soman (GD)-Induced Long-Term Neurotoxicity: Saracatinib, a Src Tyrosine Kinase Inhibitor, as a Potential Countermeasure.\n",
+      "9. Frequency of autoimmune-associated exogenous psychoses in routine clinical care.\n",
+      "10. GABA, Glx, and GSH in the cerebellum: their role in motor performance and learning across age groups.\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP2\n",
+      "==================================================\n",
+      "1. Case Series of 46 Patients with Nonketotic Hyperglycemia-Associated Chorea: A Retrospective Follow-Up Study.\n",
+      "2. Predictive Factors of Malignancy in Cervical Paragangliomas: A Retrospective Study.\n",
+      "3. Functional-structural co-dependent brain mapping of metamemory in amnestic mild cognitive impairment.\n",
+      "4. AI-Driven segmentation and morphogeometric profiling of epicardial adipose tissue in type 2 diabetes.\n",
+      "5. Individualized transcranial temporal interference stimulation (tTIS) for cognitive impairments and negative symptoms in patients with schizophrenia: a study protocol for a randomized controlled trial.\n",
+      "6. A pattern-learning algorithm associates copy number variations with brain structure and behavioural variables in an adolescent population cohort.\n",
+      "7. Tenosynovial giant cell tumor and its differential diagnosis in children.\n",
+      "8. Diagnostic interchangeability of deep-learning based Synth-STIR images generated from T1 and T2 weighted spine images.\n",
+      "9. Immunosenescence-related T cell phenotypes, structural brain imaging, and cognitive impairment in patients with schizophrenia: a moderated mediation analysis.\n",
+      "10. Regions of Interest Assessment of Prenatal Exposure to Tobacco on Adolescent Cortical Thickness and Sulcal Depth.\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP3\n",
+      "==================================================\n",
+      "1. Adaptation of the Medical Student Stress Factor Scale Into Turkish: Validity and Reliability Study.\n",
+      "2. Sleep Medicine-What's in a Name?\n",
+      "3. Emerging Role of MRI-Based Artificial Intelligence in Individualized Treatment Strategies for Hepatocellular Carcinoma: A Narrative Review.\n",
+      "4. Accuracy and Time Efficiency of Artificial Intelligence-Driven Tooth Segmentation on CBCT Images: A Validation Study Using Two Implant Planning Software Programs.\n",
+      "5. Formic Acid Electroreduction Pathways on (111) Metal Surfaces.\n",
+      "6. Network Analysis of Anxiety in Prostate Cancer Patients.\n",
+      "7. Psychometric properties of the Warwick Edinburgh Mental Well-being Scale: a systematic review.\n",
+      "8. REVERSE model: a novel approach in medical research.\n",
+      "9. Nursing and midwifery students' perceptions of sign language training in Ghana: relevance, instructional methods, and assessment practices.\n",
+      "10. A global living systematic review and meta-analysis hub of emerging vaccines in pregnancy and childhood.\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP4\n",
+      "==================================================\n",
+      "1. AMPK regulates pupal diapause by modulating glucose metabolism in the brain of the cotton bollworm, Helicoverpa armigera.\n",
+      "2. Case Series of 46 Patients with Nonketotic Hyperglycemia-Associated Chorea: A Retrospective Follow-Up Study.\n",
+      "3. Status and Prospects of Glioblastoma Multiforme Treatments.\n",
+      "4. Unveiling the Molecular Pathogenesis of MCPH: Insights From Drosophila Model System.\n",
+      "5. Individualised Alpha-tACS for Modulating Pain Perception and Neural Oscillations: A Sham-Controlled Study in Healthy Participants.\n",
+      "6. Maternal Tryptophan Supplementation Alters Offspring Gut-Brain Axis and Behavior in a Sex-Specific Manner.\n",
+      "7. Characterizing fetoplacental response to acute maternal hyperoxygenation in suspected coarctation of aorta using fetal cardiac MRI.\n",
+      "8. Drug Exposure in Chronic Kidney Disease: It Is Not Just About the Glomerular Filtration Rate.\n",
+      "9. AAV-delivered PPT1 provides long-term neurological benefits in CLN1 mice and achieves therapeutic levels in sheep brain.\n",
+      "10. Adult Hemophagocytic Lymphohistiocytosis (HLH) with Neurological Involvement: Diagnostic Complexities - A Case Report and Literature Review.\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: Print First 10 Titles for Each Group (Excluding 'excluded') ===\n",
     "\n",
@@ -224,10 +338,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f5d8febb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR COMBINED QUERY:\n",
+      "==================================================\n",
+      "1. Region-based U-nets for fast, accurate, and scalable deep brain segmentation: Application to Parkinson Plus Syndromes.\n",
+      "2. Normative range of MRI-derived fetal brain volume throughout gestation: a prospective study.\n",
+      "3. fMRIPrep Lifespan: Extending A Robust Pipeline for Functional MRI Preprocessing to Developmental Neuroimaging.\n",
+      "4. Recent advances in the detection and management of motor dysfunction in Alzheimer's disease.\n",
+      "5. Evaluating the Quality of Brain MRI Generators.\n",
+      "6. Modular strategies for spatial mapping of diverse cell type data of the mouse brain.\n",
+      "7. FastSurfer-LIT: Lesion inpainting tool for whole-brain MRI segmentation with tumors, cavities, and abnormalities.\n",
+      "8. Host genetics maps to behaviour and brain structure in developmental mice.\n",
+      "9. A New Tool for Extracting Static and Dynamic Parameters from [\n",
+      "10. Quantitative reliability assessment of brain MRI volumetric measurements in type II GM1 gangliosidosis patients.\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: Show First 10 Titles for Combined Keyword Group ===\n",
     "\n",
@@ -259,10 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fa622120",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying PubMed for: (neuroimaging pipeline OR MRI processing OR neuroinformatics pipeline) AND (structural MRI OR T1-weighted OR T2-weighted OR low-field MRI OR portable MRI) AND (continuous integration OR continuous deployment OR CI/CD OR containerization OR containerisation OR version control OR cloud-based OR serverless OR distributed storage OR BIDS OR flywheel.io OR github OR gitlab OR reproducibility) AND (brain OR neuroimaging) NOT (fMRI OR EEG OR MEG OR functional connectivity OR clinical trial) AND 2016:3000[dp]\n",
+      "Retrieved 51 PubMed IDs\n",
+      "Writing results to CSV: C:/Users/petra/Documents/UniKCL/Workshop/csvs/pubmed_v1.csv\n",
+      "Downloaded 51 records to C:/Users/petra/Documents/UniKCL/Workshop/csvs/pubmed_v1.csv\n",
+      "Summary row added for pubmed_v1\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: Download CSV and Update Summary ===\n",
     "\n",
@@ -414,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
